--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1010,6 +1010,11 @@
         <item>15</item>
         <item>20</item>
         <item>25</item>
+        <item>30</item>
+        <item>35</item>
+        <item>40</item>
+        <item>45</item>
+        <item>50</item>
     </integer-array>
 
     <!-- Process stats memory use details: labels for memory states -->
