Dynamically define currently installed vendor.img version
*parse the vendor fingerprint for the vendor build id
*automatically remove on devices without a vendor image

Thanks to @dwitherell for the help with the parsing logic :)

8.0 edits:
*Updated to a controller

Change-Id: I7bb504f9018349e4e5acd8043fe12196f121eea4

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -131,4 +131,9 @@
     <!-- Pocket judge -->
     <string name="pocket_judge_title">Pocket detection</string>
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
+
+    <!-- Vendor version -->
+    <string name="vendor_version">Vendor version</string>
+    <string name="vendor_version_default">Unknown</string>
+
 </resources>
