--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -29,6 +29,12 @@
                 android:title="@string/aicp_version"
                 android:summary="@string/device_info_default" />
 
+        <!-- Vendor version -->
+        <Preference
+                android:key="vendor_version"
+                android:title="@string/vendor_version"
+                android:summary="@string/vendor_version_default"/>
+
         <!-- System update settings - launches activity -->
         <Preference android:key="additional_system_update_settings"
                     android:title="@string/additional_system_update_settings_list_item_title">
