--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,21 +17,17 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
         android:title="@string/about_settings">
-
+		
         <!-- AICP logo -->
 		<Preference
 		        android:key="aicp_logo"
 				android:layout="@layout/aicp_about_header" />
 
-        <!-- Build date -->
-        <org.lineageos.internal.preference.deviceinfo.LineageBuildDatePreference
-                android:key="build_date" />
-
-        <!-- Detailed build version -->
+        <!-- AICP version -->
         <Preference
-                android:key="build_number"
-                android:title="@string/build_number"
-                android:summary="@string/summary_placeholder"/>
+                android:key="aicp_version"
+                android:title="@string/aicp_version"
+                android:summary="@string/device_info_default" />
 
         <!-- System update settings - launches activity -->
         <Preference android:key="additional_system_update_settings"
@@ -109,6 +105,16 @@
         <Preference
                 android:key="baseband_version"
                 android:title="@string/baseband_version"
+                android:summary="@string/summary_placeholder"/>
+
+        <!-- Build date -->
+        <org.lineageos.internal.preference.deviceinfo.LineageBuildDatePreference
+                android:key="build_date" />
+
+        <!-- Detailed build version -->
+        <Preference
+                android:key="build_number"
+                android:title="@string/build_number"
                 android:summary="@string/summary_placeholder"/>
 
         <!-- Device Kernel version -->
